Ok projet qui fonctionne en ligne de commande au prix de mon IntelliJ